Submit form change

--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@ external users in our headquarter and branch offices located in Tehran.</p>
 		<br>
 		<div>
 			<h4 class="title">Feel Free To Contact Me</h4>
-			<form name="contact_form" class="contact-forms" action="mailto:info@sajadkamali.ir"  method="GET ">
+			<form name="contact_form" class="contact-forms" method="POST" data-netlify="true">
 				<div class="row">
 					<div class="col-md-6">
 						<div class="form-group">
