--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ body {
 	    <a href="" class="hero-logo"><img src="./img/profile.png" alt="Logo Image"></a>
 			<div class="hero-copy">
 				<h1><span>I’m</span> Sajad Kamali</h1>
-				<h6>System Administrator</h6>
+				<h6>DevOps Expert</h6>
 				<div class="media-link">
 					<a href="https://www.instagram.com/sajadkamali.ir/"><i class="fa fa-instagram"></i></a>
 					<a href="https://twitter.com/SajadKamali_ir"><i class="fa fa-twitter-square"></i></a>
@@ -173,15 +173,14 @@ body {
 		<div class="about-section">
 			<div class="row">
 				<div class="col-md-6">
-					<h4>Hi there, How are you?</h4>
+					<h4>Professional Profile</h4>
 					<div class="about-content">
-            <p style="text-align: justify; text-justify: inter-word;">‘Accomplished IT Specialist with a background of computer network administration across multiple holdings
-and cyber security investigation in both offensive and defensive sides’</p>
-            <p style="text-align: justify; text-justify: inter-word;">With a deep understanding of IT infrastructure and cyber security principles, I confidentially deliver solutions
-that ensures optimal levels of IT service performance and swift resolution of issues and queries. Highly
-qualified with numerous certification Microsoft, Cisco, Linux and network security fields. I possess compelling
-technical knowledge across business systems including software, hardware and computer networking</p>
-						<span class="border-dashed"></span>
+            <p style="text-align: justify; text-justify: inter-word;">‘Accomplished DevOps Expert with a background of computer network management and system
+				administration in a production environment with high availability demands’</p>
+            <p style="text-align: justify; text-justify: inter-word;">With a deep understanding of IT infrastructure and system administration principles, I confidentially deliver
+				solutions that ensure optimal levels of IT service performance and swift resolution of issues and queries. Highly
+				qualified with numerous certifications in Linux, Cisco, and network security fields. I possess compelling technical
+				knowledge across business systems including system and infrastructure management.</p>
           <br>
 					</div>
 				</div>
@@ -262,13 +261,13 @@ technical knowledge across business systems including software, hardware and com
 						<div class="skill-bar-percent">80%</div>
 					</div> <!-- End Skill Bar -->
 
-					<h6>Network Security principles</h6>
+					<h6>Kubernetes</h6>
 					<div class="skillbar clearfix " data-percent="70%">
 						<div class="skillbar-bar"></div>
 						<div class="skill-bar-percent">70%</div>
 					</div> <!-- End Skill Bar -->
 
-					<h6>Penetration Testing</h6>
+					<h6>Cloud Computing</h6>
 					<div class="skillbar clearfix " data-percent="75%">
 						<div class="skillbar-bar"></div>
 						<div class="skill-bar-percent">75%</div>
@@ -280,10 +279,10 @@ technical knowledge across business systems including software, hardware and com
 						<div class="skill-bar-percent">60%</div>
 					</div> <!-- End Skill Bar -->
 
-					<h6>Troubleshooting</h6>
+					<h6>CI / CD</h6>
 					<div class="skillbar clearfix " data-percent="80%">
 						<div class="skillbar-bar"></div>
-						<div class="skill-bar-percent">80%</div>
+						<div class="skill-bar-percent">70%</div>
 					</div> <!-- End Skill Bar -->
 
 				</div>
@@ -303,6 +302,42 @@ technical knowledge across business systems including software, hardware and com
 		<h4 class="title">Work Experience</h4>
 		<div class="row">
 			<div id="rex-experience-slider">
+
+				<div class="listing-content">
+					<div class="col-md-2 list-img">
+						<!-- <img src="http://placehold.it/142x133" alt=""> -->
+						<div class="experience-date">
+							<h6>April, 2021 - <br>March, 2022</h6>
+						</div>
+						<span class="angle"></span>
+					</div>
+					<div class="col-md-10 list-description">
+						<h6> Elanza <span>/ DevOps Expert</span></h6>
+						<p class="workp"><b>Outline:</b> Reporting to the CTO, Performing Server Administration tasks for an online shopping website with
+							thousands of customers</p>
+            <p class="workp"><b>Key responsibilities:</b></p>
+            <p class="bullp"> • &nbsp; Designing and maintaining cloud infrastructure on bare-metal servers using Kube-spray and Rook<br>
+             • &nbsp; Designing and maintaining database cluster using MySQL kubernetes operator and innodb cluster<br>
+             • &nbsp; Administrating Linux servers and services<br>
+             • &nbsp; Performing Regular DevOps tasks including CI/CD and Git Repository Management.<br>
+			 • &nbsp; Responsible for the fast and accurate troubleshooting of reported faults.</p>
+            <br />
+            <p class="workp"><b>Work History:</b></p>
+            <p class="bullp"> • &nbsp; Migrated website from a regular VPS to Cloud environment using Kubernetes on bare-metal servers.<br>
+             • &nbsp; Maintained website infrastructure with over 6000 user per second daily load.<br>
+             • &nbsp; Delivered CI/CD solutions using Azure DevOps with different test environments and agents.<br>
+			 • &nbsp; Configured system monitoring solution with Prometheus and Grafana.<br>
+			 • &nbsp; Created various scripts for automation and backup using Bash and ansible.<br>
+			 • &nbsp; Configured multiple-layer backup solutions using “Backup Exec” and “VEEAM”<br>
+			 • &nbsp; Configured company’s Firewall for bandwidth shaping and site-to-site VPN<br>
+			 • &nbsp; Worked on server hardening based on security best practices. <br>
+			 • &nbsp; Provided regular reports about the system’s health status.<br>		
+
+            <br />
+            <br />
+					</div>
+				</div>
+
         <div class="listing-content">
 					<div class="col-md-2 list-img">
 						<!-- <img src="http://placehold.it/142x133" alt=""> -->
